# cpp-rasterizer

./: .gitignore  CMakeLists.txt
src/: color.hpp  engine.cpp  engine.hpp  main.cpp  matrix.hpp  mesh.cpp  mesh.hpp  object.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  test_object.hpp  time_step.hpp  vector.hpp  window.cpp  window.hpp
